--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -6,6 +6,10 @@
 * {
     font-family: "Noto Sans", sans-serif;
 }
+
+#logo-container {
+  padding-left: 10px;
+}
 #demo-user-modal {
   margin: 1em;
   border-radius: 12px;
@@ -56,10 +60,9 @@
 #navigation {
   display: flex;
   justify-content: space-between;
-  width: 95%;
+  width: 100%;
   height: 100px;
   list-style-type: none;
-  padding: 2em;
   background: linear-gradient(to right, #2b3a42, #3f596b, #557a8e);
  
 }
@@ -68,6 +71,7 @@
    width: 200px;
    padding-top: 5px;
    margin: 2px;
+   z-index: 1000;
 }
 
 .hidden {
@@ -100,7 +104,7 @@
   display: none;
 }
 
-#user-menu {
+/* #user-menu {
   
   margin: 0;
   list-style-type: none;
@@ -113,17 +117,20 @@
   color: white;
   border: none;
   border-radius: 30px;
+
   
-  padding: .5em 3em;
-  
-}
+} */
 
 #user-menu-button {
-  height: 50%;
+  width: 140px;
+  height: 45px;
   align-self: center;
   border: none;
   border-radius: 30px; 
   background: linear-gradient(to right, #26a69a, #4dd0e1);
+  font-size: small;
+  color: white;
+  
 
 }
 
@@ -131,9 +138,9 @@
   background: #4dd0e1;
 }
 
-#user-menu:hover {
+/* #user-menu:hover {
   background: #4dd0e1;
-}
+} */
 
 #center-text {
   display: flex;
@@ -144,17 +151,26 @@
   display: flex;
   flex-direction: column;
   align-content: center;
+  padding-top: 10px;
+  padding-right: 10px;
+  margin-top: 10px;
 }
 
 
 
-@media (max-width: 564) {
+@media (max-width: 564px) {
   .profile-dropdown {
     padding-left: 0px;
     margin-right: 500px;
 
   }
+
+  #user-menu-button {
+    width: 80px;
+    height: 30px;
+  }
 }
+
 @media (max-width: 400px) {
   #navigation {
     padding: 0px;
